--- a/trophies.html
+++ b/trophies.html
@@ -25,7 +25,8 @@
     <p>This table showcases the career trophies Messi has won and the seasons in which he won it. All of the club
       trophies(UEFA Champions League, La Liga, Copa del Rey, Spanish Supercup, UEFA Super Cup, FIFA Club World Cup)
       were won with Fc Barcelona. Messi has won one international trophy with Argentina, which is the Copa America
-      in 2021.
+      in 2021. With FC Barcelona he has won the UEFA Champions League 4 times, has 10 La Liga titles, 7 Copa del Rey's, 8 Spanish Supercups,
+      3 UEFA Super Cup's, and 3 FIFA Club World Cups. A total of 36 career trophies.
     </p>
     <table>
       <thead>
