--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
     </header>
     
         <main id="container">
-            <div>
-                <h1 id = "biography">Lionel Messi</h1>
+            <h1 id = "biography">Lionel Messi</h1>
+            <div class="grid">
+                <img id="ball" src="images/soccer_ball_new.png" alt="soccer ball"/>
                 <img id="image10" src="images/Messi_2015_uefa_super_cup.jpg" alt="Messi with his uefa super cup medal in 2015"/>
-            <p>Lionel Messi is an Argentinian soccer player who currently plays for a club team named 
+                <img id="ball" src="images/soccer_ball_new.png" alt="soccer ball"/>
+            <p class = text1>Lionel Messi is an Argentinian soccer player who currently plays for a club team named 
                 Paris-Saint Germain. He is widely regarded by many professional players, managers, commentators, journalists
                 and soccer fans as the greatest player of all time. He has won an impressive amount of career titles,
             set many records, and has phenomenal goal as well as assist stats in his career. He also has the record amount of ballon d'or
@@ -45,7 +47,7 @@
             behind the strikers.
             </p>
         <hr>
-            <p>Lionel Andres Cuccitini Messi was born on June 24th, 1987 in Rosario, Sante Fe, Argentina. He developed
+            <p class = text2>Lionel Andres Cuccitini Messi was born on June 24th, 1987 in Rosario, Sante Fe, Argentina. He developed
             an interest for soccer at an early age, joining local club Grandoli at the age of four which was coached
             by his father. At six years old, he joined the youth team for Newell's Old Boys. A club which he is still a 
             supporter of. Messi was unfortunately diagnosed with Growth Hormone Deficiency when he was 10 years old.
@@ -56,7 +58,7 @@
             making it to the professional senior team.
             </p>
         <hr>
-            <p>Messi made his professional debut for the senior team on October 16th, 2004 against local rivals Espanyol.
+            <p class = text3>Messi made his professional debut for the senior team on October 16th, 2004 against local rivals Espanyol.
            He went on to be fully promoted for the first team in the 2005/2006 season. Messi quickly gained stardom
            and praise in his early career. Being considered by many as one of the best young talents in the world and even
            drawing comparisons with Argentinian soccer legend Diego Maradona who was considered by many to be the greatest soccer
@@ -69,7 +71,7 @@
            in 2021 to play for Paris Saint Germain.
             </p>
         <hr>
-            <p>Messi's professional international career with Argentina started in 2005 when he made his debut against Hungary.
+            <p class = text4>Messi's professional international career with Argentina started in 2005 when he made his debut against Hungary.
            Although Messi performed at a great level with Argentina as he did at club level, the team success was not as good
            as it was with Fc Barcelona. For many years Argentina struggled as a team and drew many criticism from fans and media.
            They reached the final for the 2007 Copa America tournament but lost the final to rivals Brazil 3-0. Messi won the award
@@ -90,9 +92,9 @@
             <div class="form">
             <form  action="https://formspree.io/f/mdobnjnl"
                 method="POST">
-                <label for="fname">First name:</label><br>
+                <label for="fname">First Name:</label><br>
                 <input type="text" id="fname" name="fname"><br>
-                <label for="lname">Last name:</label><br>
+                <label for="lname">Last Name:</label><br>
                 <input type="text" id="lname" name="lname"><br>
                 <label for="email">Email Address:</label><br>
                 <input type="text" id="email" name="email"><br><br>
