--- a/trophies.html
+++ b/trophies.html
@@ -38,6 +38,7 @@
       in 2021. With FC Barcelona he has won the UEFA Champions League 4 times, has 10 La Liga titles, 7 Copa del Rey's, 8 Spanish Supercups,
       3 UEFA Super Cup's, and 3 FIFA Club World Cups. A total of 36 career trophies.
     </p>
+    <img id="icon" src="images/trophy_icon.png" alt="golden trophy"/>
     <table>
       <thead>
         <tr>
