--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <main id="container">
             <h1 id = "biography">Lionel Messi</h1>
             <div class="grid">
-                <img id="ball" src="images/soccer_ball_new.png" alt="soccer ball"/>
+                <img class="ball" src="images/soccer_ball_new.png" alt="soccer ball"/>
                 <img id="image10" src="images/Messi_2015_uefa_super_cup.jpg" alt="Messi with his uefa super cup medal in 2015"/>
-                <img id="ball" src="images/soccer_ball_new.png" alt="soccer ball"/>
+                <img class="ball" src="images/soccer_ball_new.png" alt="soccer ball"/>
             <p class = text1>Lionel Messi is an Argentinian soccer player who currently plays for a club team named 
                 Paris-Saint Germain. He is widely regarded by many professional players, managers, commentators, journalists
                 and soccer fans as the greatest player of all time. He has won an impressive amount of career titles,
@@ -97,7 +97,7 @@
                 <label for="lname">Last Name:</label><br>
                 <input type="text" id="lname" name="lname"><br>
                 <label for="email">Email Address:</label><br>
-                <input type="text" id="email" name="email"><br><br>
+                <input type="text" id="email" name="email"><br></br>
                 <input type="submit" value="Submit">
             </form>
             </div>
