--- a/stats.html
+++ b/stats.html
@@ -19,7 +19,7 @@
     <title>Stats</title>
 </head>
 <body>
-  <a class="skip" href="#container">Skip to Main Content</a>
+  <a class="skip" href="#container1">Skip to Main Content</a>
     <header>
         <nav>
             <ul id = "nav_links" class="nav_links">
@@ -30,7 +30,7 @@
             </ul>
         </nav>
     </header>
-  <main id="container">
+  <main id="container1">
     <h1 id = "club_stats" class="club_stats">Club Stats</h1>
     <p>The stats on the first table are Messi's club career stats. Seasons from 2004-2021 are all for Fc Barcelona.
       2021-2022 is for his new club Paris-Saint Germain. The second table of the page shows 
@@ -150,15 +150,15 @@
         </tr>
         <tr>
          <th scope="row" class="rowhead">2021-2022</th>
-         <td>8</td>
-         <td>3</td>
-         <td>0</td>   
+         <td>14</td>
+         <td>6</td>
+         <td>3</td>   
         </tr>
         <tr>
           <th scope="row" class="rowhead">Career Totals</th>
-          <td>786</td>
-          <td>675</td>
-          <td>268</td>   
+          <td>792</td>
+          <td>678</td>
+          <td>271</td>   
           </tr>
       </tbody>
     </table>
@@ -272,13 +272,13 @@
            </tr>
            <tr>
             <th scope="row" class="rowhead">2021</th>
-            <td>14</td>
+            <td>16</td>
             <td>9</td>
             <td>5</td>   
            </tr>
            <tr>
            <th scope="row" class="rowhead">Career Totals</th>
-           <td>156</td>
+           <td>158</td>
            <td>80</td>
            <td>47</td>   
            </tr>
